--- a/src/main/resources/templates/posts-save.mustache
+++ b/src/main/resources/templates/posts-save.mustache
@@ -1,25 +1,25 @@
 {{>layout/header}}
 
-<h1>게시글 등록</h1>
+<h1>post register</h1>
 
 <div class="col-md-12">
     <div class="col-md-4">
         <form>
             <div class="form-group">
-                <label for="title">제목</label>
-                <input type="text" class="form-control" id="title" placeholder="제목을 입력하세요">
+                <label for="title">title</label>
+                <input type="text" class="form-control" id="title" placeholder="title">
             </div>
             <div class="form-group">
-                <label for="author"> 작성자 </label>
-                <input type="text" class="form-control" id="author" placeholder="작성자를 입력하세요">
+                <label for="author"> author </label>
+                <input type="text" class="form-control" id="author" placeholder="author">
             </div>
             <div class="form-group">
-                <label for="content"> 내용 </label>
-                <textarea class="form-control" id="content" placeholder="내용을 입력하세요"></textarea>
+                <label for="content"> content </label>
+                <textarea class="form-control" id="content" placeholder="content"></textarea>
             </div>
         </form>
-        <a href="/" role="button" class="btn btn-secondary">취소</a>
-        <button type="button" class="btn btn-primary" id="btn-save">등록</button>
+        <a href="/" role="button" class="btn btn-secondary">cancel</a>
+        <button type="button" class="btn btn-primary" id="btn-save">register</button>
     </div>
 </div>
 
